# flood-prediction-project

./: .gitignore  README.md  pyproject.toml
src/data/: README.md  urban_active_flood_days.csv  urban_annual_nightlights.csv  urban_flood_groundsource_df.csv  urban_osm_metrics.csv
src/data_extraction/groundsource_localized/: 1_urban_flood_groundsource.ipynb  2_active_flood_days.ipynb  urban_flood_groundsource.ipynb
src/data_extraction/nightlight_viirs/: 01_nightlight_viirs_metrics.ipynb
src/data_extraction/osm_features/: Design Decisions.md  osm_features.ipynb
