[project]
name = "flood-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "ipykernel>=7.1.0",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.9.1",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.6",
    "mpmath>=1.3.0",
    "nbconvert>=7.16.6",
    "nodejs-bin>=18.4.0a4",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.4.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
